Fix title alignment for ProjectViewHeader when not in a projects list

--- a/src/app/project-view-header/project-view-header.component.css
+++ b/src/app/project-view-header/project-view-header.component.css
@@ -5,6 +5,8 @@
 }
 
 .title {
+  display: flex;
+  flex-grow: 1;
   max-width: 45%;
   padding-right: 1em;
   overflow: hidden;
